# amaconsole

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md  home.py  install.sh  requirements.txt  setup.py  setup.py.in
amaconsole/: __init__.py  __init__.py.in  ama.py  banner.py  config.py  console.py  extensions.py  home.py  main.py  parsers.py  run.py
amaconsole/commands/: __init__.py  category.py
amaconsole/commands/bgprocess/: __init__.py  bgprocess.py
amaconsole/commands/console/: __init__.py  extensions.py  simple.py
amaconsole/commands/module/: __init__.py  information.py  interaction.py  pool.py
amaconsole/commands/plugins/: __init__.py  cupp.py  hashcat_utils.py  longtongue.py  tohash.py  tohash.py~
amaconsole/commands/resman/: resman.py  search.py
amaconsole/commands/scheduler/: __init__.py  monitor.py
amaconsole/commands/session/: __init__.py  interaction.py
amaconsole/commands/utilities/: __init__.py  hashes.py  hashid.py
amaconsole/processor/: __init__.py  bg_processor.py  process.py
amaconsole/proto/: README
amaconsole/utils/: __init__.py  color.py  filesystem.py  logger.py  misc.py  redirect.py  shell.py
data/agents/: ubuntu20.04-python3.8.dockerfile
data/extensions/: README  simple_commands.py
libs/: CMakeLists.txt
tests/: CMakeLists.txt  osinfo.sh
tests/utils/: test_color.py  test_filesystem.py  test_misc.py
utils/: home.py
